# Taylor-s-Tune

./: .gitignore  Dockerfile  README.md  SECEU.py  data_cleaning.ipynb  data_engineer.ipynb  data_processing_rag.ipynb  dev.ipynb  evaluation_kaggle.py  evaluation_kaggle_fewshots.py  evaluation_twitter.py  evaluation_twitter_fewshots.py  fewshots_emoint_val_label_list.pkl  fewshots_emoint_val_predicted_list.pkl  fewshots_kaggle_emotion_1000_label_list.pkl  fewshots_kaggle_emotion_1000_predicted_list.pkl  groq_chat.py  inference.ipynb  kaggle_emotion_1000_label_list.pkl  kaggle_emotion_1000_predicted_list.pkl  kaggle_emotion_label_list.pkl  kaggle_emotion_predicted_list.pkl  lyrics_summarization.ipynb  pyproject.toml  rag_pipeline.ipynb  rag_pipeline_full_data.ipynb  requirements.txt  seceu_item.pkl  seceu_res.pkl  taylor-EDA.ipynb  ts_questionaire.py  utils_metrics.py  vector_db_upload.ipynb  💬_Chat.py
.devcontainer/: devcontainer.json
data/: en-stopwrods-extended.txt  lyrics_criteria.csv
data/Taylor_Swift_Songs_Data/: Grades.csv
data/Taylor_Swift_Songs_Data/Taylor_Swift_Genius/: scraper.ipynb
data/Taylor_Swift_Songs_Data/lyrics/: 09-evermore_deluxe_version.csv
data/cleaned_data/: lyrics_metadata.csv  rag_dataset.csv  rag_dataset_enhanced.csv
data/emoint_2017/: emoint_dev.csv  emoint_test.csv  emoint_training.csv
data/emoint_2017/development/: anger.txt  fear.txt  joy.txt  (+1 more)
data/original_data/: Taylor_Swift_Genius_Data.xlsx  Taylor_Swift_Spotify_Data.xlsx
data/prompts/: evaluation_prompts.py
pages/: 1_❤️_Emotional_questions.py  2_📊_Emotional_scores.py
(+217 files in other folders)
