[tool.poetry]
name = "taylor-s-tune"
version = "0.1.0"
description = ""
authors = ["cannox227 <tommaso.canova00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
spotipy = "^2.23.0"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
